--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
                     <a href="https://nadia-y.github.io/rsschool-cv/cv" target="_blank"> https://nadia-y.github.io/rsschool-cv/cv </a> 
                 </li>
                 <li>
-                    <a href="https://nadia-y.github.io/repair-design-project/" target="_blank">   https://nadia-y.github.io/repair-design-project/ </a> 
+                    <a href="https://nadia-y.github.io/RD/" target="_blank"> https://nadia-y.github.io/RD/ </a> 
+                </li>
+                <li>
+                    <a href="https://nadia-y.github.io/singolo-/." target="_blank">  https://nadia-y.github.io/singolo-/. </a> 
                 </li>
             </ul>
         </div>
