--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <a href="https://nadia-y.github.io/RD/" target="_blank"> https://nadia-y.github.io/RD/ </a> 
                 </li>
                 <li>
-                    <a href="https://nadia-y.github.io/singolo-/." target="_blank">  https://nadia-y.github.io/singolo-/. </a> 
+                    <a href="https://nadia-y.github.io/SN/" target="_blank">  https://nadia-y.github.io/SN/ </a> 
                 </li>
             </ul>
         </div>
