--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
             </h3>
             <ul class="contacts">
                 <li> 
+                    <a href="https://nadia-y.github.io/Photo/" target="_blank"> https://nadia-y.github.io/Photo/</a> 
+                </li>
+                <li> 
                     <a href="https://nadia-y.github.io/theyalow/" target="_blank"> https://nadia-y.github.io/theyalow/ </a> 
+                </li>
+                <li>
+                    <a href="https://nadia-y.github.io/SN/" target="_blank">  https://nadia-y.github.io/SN/ </a> 
                 </li>
                 <li> 
                     <a href="https://nadia-y.github.io/diplom/" target="_blank"> https://nadia-y.github.io/diplom/ </a> 
@@ -121,9 +127,7 @@
                 <li>
                     <a href="https://nadia-y.github.io/RD/" target="_blank"> https://nadia-y.github.io/RD/ </a> 
                 </li>
-                <li>
-                    <a href="https://nadia-y.github.io/SN/" target="_blank">  https://nadia-y.github.io/SN/ </a> 
-                </li>
+               
             </ul>
         </div>
         <div>
