add new project

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                         GIT
                     </li>
                     <li>
+                        WordPress
+                    </li>
+                    <li>
                         Photoshop
                     </li>
                     <li>
@@ -107,6 +110,9 @@
             </h3>
             <ul class="contacts">
                 <li> 
+                    <a href="https://nadia-y.github.io/TV-my-design/" target="_blank"> https://nadia-y.github.io/TV-my-design/</a> 
+                </li>
+                <li> 
                     <a href="https://nadia-y.github.io/Photo/" target="_blank"> https://nadia-y.github.io/Photo/</a> 
                 </li>
                 <li> 
@@ -117,9 +123,6 @@
                 </li>
                 <li> 
                     <a href="https://nadia-y.github.io/diplom/" target="_blank"> https://nadia-y.github.io/diplom/ </a> 
-                </li>
-                <li>
-                    <a href="https://www.codecademy.com/profiles/net2269025465" target="_blank"> https://www.codecademy.com/profiles/net2269025465 </a> 
                 </li>
                 <li>
                     <a href="https://nadia-y.github.io/rsschool-cv/cv" target="_blank"> https://nadia-y.github.io/rsschool-cv/cv </a> 
@@ -143,6 +146,9 @@
                 </li>
                 <li>
                     The Rolling Scopes School.
+                </li>
+                <li>
+                    <a href="https://www.codecademy.com/profiles/net2269025465" target="_blank"> https://www.codecademy.com/profiles/net2269025465 </a> 
                 </li>
             </ul>
         </div>
