--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 CONTACTS:
             </h3>
             <ul class="contacts">
+                <li>
+                    linkedin:<a href="#"> https://www.linkedin.com/feed/ </a>  
+                </li>
                 <li> 
                     e-mail: <a href="mailto:"> nadia-2501@yandex.ru</a>  
                 </li>
