--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         GIT
                     </li>
                     <li>
+                        React
+                    </li>
+                    <li>
                         WordPress
                     </li>
                     <li>
@@ -113,6 +116,9 @@
             </h3>
             <ul class="contacts">
                 <li> 
+                    <a href="https://nadia-y.github.io/" target="_blank"> https://nadia-y.github.io/</a> 
+                </li>
+                <li> 
                     <a href="https://nadia-y.github.io/TV-my-design/" target="_blank"> https://nadia-y.github.io/TV-my-design/</a> 
                 </li>
                 <li> 
@@ -145,7 +151,10 @@
                     BSEU (2004-2010, faculty of marketing, Marketing specialist);
                 </li>
                 <li>
-                    Stormnet (2019, course "HTML, CSS, JavaScript”);
+                    Stormnet (2020, course "HTML, CSS, JavaScript”);
+                </li>
+                <li>
+                    IT SHATLE (2020, course "JavaScript, React”);
                 </li>
                 <li>
                     The Rolling Scopes School.
@@ -164,7 +173,10 @@
                         BSEU;
                     </li>
                     <li>
-                        Polyglot (2015, course Pre-Intermediate).
+                        Polyglot (2017, course Pre-Intermediate).
+                    </li>
+                    <li>
+                        RIGHT NOW (2020-2021, course Intermediate).
                     </li>
                 </ul>
         </div>
