--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </h3>
             <ul class="contacts">
                 <li> 
-                    <a href="https://nadia-y.github.io/" target="_blank"> https://nadia-y.github.io/</a> 
+                    <a href="https://nadia-y.github.io/ToDoList-React/" target="_blank"> https://nadia-y.github.io/ToDoList-React/</a> 
                 </li>
                 <li> 
                     <a href="https://nadia-y.github.io/TV-my-design/" target="_blank"> https://nadia-y.github.io/TV-my-design/</a> 
